--- a/almanac/package.json
+++ b/almanac/package.json
@@ -2,9 +2,9 @@
   "name": "almanacAPI",
   "main": "server.js",
   "dependencies": {
-    "express": "~4.0.0",
-    "mongoose": "~3.6.13",
-    "body-parser": "~1.0.1"
+    "body-parser": "~1.0.1",
+    "express": "^4.14.0",
+    "mongoose": "^4.5.8"
   },
   "author": "Kendra Swafford",
   "license": "MIT",
