--- a/almanac/package.json
+++ b/almanac/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "~1.0.1",
     "express": "^4.14.0",
+    "mongodb": "^2.2.11",
     "mongoose": "^4.5.8"
   },
   "author": "Kendra Swafford",
