--- a/final/config.json
+++ b/final/config.json
@@ -1,5 +1,5 @@
 {
-    "connectionString": "mongodb://localhost:27017/mean-stack-registration-login-example",
+    "connectionString": "mongodb://admin:hasswa@ds063546.mlab.com:63546/almanac",
 	"apiUrl": "http://ec2-54-70-44-156.us-west-2.compute.amazonaws.com:3000/api",
     "secret": "super secret"
 }
